#262: Added CommandSecurityDefinitions to Filter Adjustment UCs